# sphinx-theme-template

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  LICENSE  README.md  copier.yaml  noxfile.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
docs/: .copier-answers.yml  CHANGELOG.md  LICENSE  noxfile.py  package-lock.json  pyproject.toml
docs/source/: conf.py  index.md  quickstart.md  robots.txt  usage.md
sample_docs/: pyproject.toml
sample_docs/source/: conf.py  index.rst  long-page.rst  placeholder-two.rst
sample_docs/source/kitchen-sink/: api.rst  blocks.rst  generic.rst  images.rst  lists.rst  structure.rst  typography.rst
src/project_slug/: __init__.py  layout.html  tailwind.config.js
src/project_slug/components/: basic.html  head.html
src/project_slug/static/styles/: .gitignore  input.css
template/: .gitignore  README.md.jinja  noxfile.py.jinja  package-lock.json.copier  package.json.jinja  pyproject.toml.copier  tailwind.config.js.jinja  uv.lock.jinja
template/.github/workflows/: publish-to-pages.yaml  test.yaml
template/src/{{ project_slug }}/: __init__.py.copier  layout.html  theme.toml
template/src/{{ project_slug }}/static/styles/: input.css
template/tests/: test_toc.py.jinja
template/{{ sample_docs_slug }}/: pyproject.toml.jinja
template/{{ sample_docs_slug }}/source/: conf.py.copier
template/{{ sample_docs_slug }}/source/kitchen-sink/: admonitions.rst  lists.rst  tables.rst
tests/: .gitignore  conftest.py  test_bake.py  test_toc.py
tests/test_bake/defaults/: .copier-answers.yml  CHANGELOG.md  LICENSE  README.md  noxfile.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
tests/test_bake/defaults/sample_docs/source/: conf.py  long-page.rst
tests/test_bake/defaults/source/: .hidden.md  conf.py  demo.rst  sample.md  sections.md
tests/test_bake/defaults/src/sphinx_minimal_theme/: __init__.py  toc.py
tests/test_bake/defaults/tests/: test_toc.py
tests/test_bake/nox_gettext/source/locales/cs/LC_MESSAGES/: demo.po  index.po  sample.po  sections.po
tests/test_bake/nox_gettext/source/locales/he/LC_MESSAGES/: demo.po  index.po  sample.po  sections.po
