[project]
name = "sphinx-theme-template"
version = "0.1.0"
description = "A Copier template for creating modern Sphinx documentation themes with Tailwind CSS. It offers a rich developer experience in VS Code, debugging, and automatic live reloading upon changes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "copier>=9.5.0",
]
