[project]
name = "sphinx-theme-template"
version = "0.1.0"
description = "A Copier template for creating modern Sphinx documentation themes with Tailwind CSS. It offers a rich developer experience in VS Code, debugging, and automatic live reloading upon changes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "copier>=9.5.0",
    # The remaining are rather "dev" dependencies
    "pytest==8.3.4",
    "nox==2024.10.9",
    "pytest-datadir==1.5.0",
    "deep_dircmp==0.2.0",
    "freezegun==1.5.1",

]

[tool.pytest.ini_options]
addopts = [
    # Recommended by Pytest for new projects
    "--import-mode=importlib",
    # Ignore tests in template/ and tests/test_bake/
    "--ignore=template",
    "--ignore=tests/test_bake/",

]