[project]
name = "my-documentation"
version = "0.1.0"
dependencies = [
    "sphinx==8.1.3",
    "myst-parser==4.0.0",
    "linkify-it-py==2.0.3",
    "sphinx-design==0.6.1",
    "sphinx_copybutton==0.5.2",
    "sphinxcontrib.mermaid==1.0.0",
    "sphinx-reredirects==0.1.5",
    "sphinx-sitemap==2.6.0",
    "sphinx-copybutton==0.5.2",
]
requires-python = ">=3.11"